[workspace]
resolver = "2"
members = [
    "fvm",
    "sdk",
    "shared",
    "testing/conformance",
    "testing/integration",
    "ipld/*",
    "testing/integration/tests/*"
]

[profile.actor]
inherits = "release"
panic = "abort"
overflow-checks = true
lto = true
opt-level = "z"
#strip = true

[patch.crates-io]
bellperson = { git = "https://github.com/filecoin-project/bellman", branch = "v0-18-release-branch" }
filecoin-proofs-v1 = { package = "filecoin-proofs", git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "releases/v11-branch" }
filecoin-hashers = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "releases/v11-branch" }
fr32 = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "releases/v11-branch" }
storage-proofs-core = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "releases/v11-branch" }
storage-proofs-porep = { git = "https://github.com/filecoin-project/rust-fil-proofs", branch = "releases/v11-branch" }
filecoin-proofs-api = { git = "https://github.com/filecoin-project/rust-filecoin-proofs-api", branch = "releases/v11-branch" }